added README file also completed contact & about page

--- a/index.html
+++ b/index.html
@@ -157,178 +157,59 @@
 
                 </div>
             </div>
-            <div>
-                <footer
-                    class="footer sm:footer-horizontal bg-base-200 text-base-content py-10 mb-0 bg-gray-900 text-white">
-                    <div
-                        class="w-11/12 lg:w-8/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 text-xs">
-                        <aside class="w-fit">
-                            <a class="font-bold text-xl text-blue-700">SwiftCart</a>
-                            <p>
-                                Your one-stop shop for all your fashion
-                                and lfestyle needs. Quality products, fast
-                                delivery, and excellent support
-                            </p>
-                        </aside>
-                        <nav class="flex flex-col space-y-2 w-fit">
-                            <h6 class="footer-title">Quick Links</h6>
-                            <a class="link link-hover">Home</a>
-                            <a class="link link-hover">Product</a>
-                            <a class="link link-hover">About</a>
-                            <a class="link link-hover">Contacts</a>
-                        </nav>
-                        <nav class="flex flex-col space-y-2 w-fit">
-                            <h6 class="footer-title">Support</h6>
-                            <a class="link link-hover">FAQ</a>
-                            <a class="link link-hover">Shipping</a>
-                            <a class="link link-hover">Return</a>
-                            <a class="link link-hover">Privacy policy</a>
-                        </nav>
-                        <form>
-                            <h6 class="footer-title space-y-2">SUBSCRIBE TO OUR NEWSLETTER</h6>
-                            <fieldset class="w-fit">
-                                <label>The latest news, articles, and resources,sent to your inbox weekly.
-                                </label>
-                                <div class="lg:flex gap-2 mt-2 text-black text-xs">
-                                    <input type="text" placeholder="Enter your email"
-                                        class="input input-bordered w-full lg:w-3/5" />
-                                    <button class="btn btn-primary w-full lg:w-2/5 mt-2 lg:mt-0">Subscribe</button>
-                                </div>
-                            </fieldset>
-                        </form>
-                    </div>
-
-                </footer>
-                <div class="bg-gray-900">
-                    <div class="w-11/12 lg:w-8/12 mx-auto">
-                        <hr class="border-t border-white/30" />
-                    </div>
-                </div>
-                <footer
-                    class="footer sm:footer-horizontal bg-neutral text-neutral-content items-center py-4 bg-gray-900 text-white">
-                    <div
-                        class="w-11/12 lg:w-8/12 mx-auto flex flex-col-reverse lg:flex-row lg:items-center lg:justify-between">
-
-                        <aside class="grid-flow-col items-center">
-
-                            <p>© 2025 SwiftCart, Inc. All rights reserved.
-                            </p>
-                        </aside>
-                        <nav class="flex gap-5 md:place-self-center md:justify-self-end">
-                            <a>
-                                <i class="fa-brands fa-facebook"></i>
-                            </a>
-                            <a>
-                                <i class="fa-brands fa-twitter"></i>
-                            </a>
-                            <a>
-                                <i class="fa-brands fa-instagram"></i>
-                            </a>
-                            <a>
-                                <i class="fa-brands fa-linkedin"></i>
-                            </a>
-                            <a>
-                                <i class="fa-solid fa-envelope"></i>
-                            </a>
-                        </nav>
-                    </div>
-                </footer>
-            </div>
         </section>
         <section id="product" class="page-section hidden">
-            <div class="w-11/12 lg:w-8/12 mx-auto pb-6">
+            <div class="w-11/12 lg:w-8/12 mx-auto pb-12">
                 <h1 class="text-3xl font-bold text-center my-12">Our Product</h1>
                 <div>
                     <div id="category-list" class="flex justify-center gap-2 mb-6">
-                        <button onclick="" id="all-products" class="btn btn-sm btn-outline w-fit justify-start">All</button>
+                        <button onclick="" id="all-products"
+                            class="btn btn-sm btn-outline w-fit justify-start">All</button>
                     </div>
                 </div>
                 <div id="show-category-products" class="grid grid-cols-1 lg:grid-cols-3 gap-5">
 
                 </div>
             </div>
-            <div>
-                <footer
-                    class="footer sm:footer-horizontal bg-base-200 text-base-content py-10 mb-0 bg-gray-900 text-white">
-                    <div
-                        class="w-11/12 lg:w-8/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 text-xs">
-                        <aside class="w-fit">
-                            <a class="font-bold text-xl text-blue-700">SwiftCart</a>
-                            <p>
-                                Your one-stop shop for all your fashion
-                                and lfestyle needs. Quality products, fast
-                                delivery, and excellent support
-                            </p>
-                        </aside>
-                        <nav class="flex flex-col space-y-2 w-fit">
-                            <h6 class="footer-title">Quick Links</h6>
-                            <a class="link link-hover">Home</a>
-                            <a class="link link-hover">Product</a>
-                            <a class="link link-hover">About</a>
-                            <a class="link link-hover">Contacts</a>
-                        </nav>
-                        <nav class="flex flex-col space-y-2 w-fit">
-                            <h6 class="footer-title">Support</h6>
-                            <a class="link link-hover">FAQ</a>
-                            <a class="link link-hover">Shipping</a>
-                            <a class="link link-hover">Return</a>
-                            <a class="link link-hover">Privacy policy</a>
-                        </nav>
-                        <form>
-                            <h6 class="footer-title space-y-2">SUBSCRIBE TO OUR NEWSLETTER</h6>
-                            <fieldset class="w-fit">
-                                <label>The latest news, articles, and resources,sent to your inbox weekly.
-                                </label>
-                                <div class="lg:flex gap-2 mt-2 text-black text-xs">
-                                    <input type="text" placeholder="Enter your email"
-                                        class="input input-bordered w-full lg:w-3/5" />
-                                    <button class="btn btn-primary w-full lg:w-2/5 mt-2 lg:mt-0">Subscribe</button>
-                                </div>
-                            </fieldset>
-                        </form>
-                    </div>
-
-                </footer>
-                <div class="bg-gray-900">
-                    <div class="w-11/12 lg:w-8/12 mx-auto">
-                        <hr class="border-t border-white/30" />
-                    </div>
-                </div>
-                <footer
-                    class="footer sm:footer-horizontal bg-neutral text-neutral-content items-center py-4 bg-gray-900 text-white">
-                    <div
-                        class="w-11/12 lg:w-8/12 mx-auto flex flex-col-reverse lg:flex-row lg:items-center lg:justify-between">
-
-                        <aside class="grid-flow-col items-center">
-
-                            <p>© 2025 SwiftCart, Inc. All rights reserved.
-                            </p>
-                        </aside>
-                        <nav class="flex gap-5 md:place-self-center md:justify-self-end">
-                            <a>
-                                <i class="fa-brands fa-facebook"></i>
-                            </a>
-                            <a>
-                                <i class="fa-brands fa-twitter"></i>
-                            </a>
-                            <a>
-                                <i class="fa-brands fa-instagram"></i>
-                            </a>
-                            <a>
-                                <i class="fa-brands fa-linkedin"></i>
-                            </a>
-                            <a>
-                                <i class="fa-solid fa-envelope"></i>
-                            </a>
-                        </nav>
-                    </div>
-                </footer>
-            </div>
         </section>
         <section id="about" class="page-section hidden">
-
+            <div class="w-11/12 lg:w-8/12 mx-auto pb-12">
+                <h1 class="text-3xl font-bold text-center my-12">About SwiftCart</h1>
+                <p class="text-center text-[#00000080]">SwiftCart is a leading online shopping platform that offers a wide range of products to customers worldwide. With a commitment to providing an exceptional shopping experience, SwiftCart has become a trusted destination for millions of shoppers. The company was founded with the vision of creating a convenient and reliable online marketplace where customers can find everything they need, from fashion and electronics to home goods and more.</p>
+                <p class="text-center text-[#00000080] mt-4">At SwiftCart, we prioritize customer satisfaction and strive to exceed expectations. We offer a user-friendly interface, secure payment options, and fast delivery services to ensure that our customers have a seamless shopping experience. Our extensive product selection is sourced from reputable brands and suppliers, ensuring quality and authenticity.</p>
+                <p class="text-center text-[#00000080] mt-4">In addition to our commitment to customer satisfaction, SwiftCart also values sustainability and social responsibility. We actively seek out eco-friendly products and work with suppliers who share our values. We believe in giving back to the community and regularly participate in charitable initiatives.</p>
+                <p class="text-center text-[#00000080] mt-4">With a focus on innovation and continuous improvement, SwiftCart is dedicated to providing the best online shopping experience for our customers. We are constantly updating our platform with new features and expanding our product offerings to meet the evolving needs of our customers. Whether you're looking for the latest fashion trends, cutting-edge electronics, or everyday essentials, SwiftCart is your go-to destination for all your shopping needs.</p>
+            </div>
         </section>
         <section id="contact" class="page-section hidden">
+            <div class="w-11/12 lg:w-8/12 mx-auto pb-12">
+                <h1 class="text-3xl font-bold text-center my-12">Contact Us</h1>
+                <form class="w-full md:w-2/3 lg:w-1/2 mx-auto">
+                    <div class="mb-4">
+                        <label class="block text-gray-700 text-sm font-bold mb-2" for="name">Name</label>
+                        <input
+                            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                            id="name" type="text" placeholder="Your name">
+                    </div>
+                    <div class="mb-4">
+                        <label class="block text-gray-700 text-sm font-bold mb-2" for="email">Email</label>
+                        <input
+                            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                            id="email" type="email" placeholder="Your email">
+                    </div>
+                    <div class="mb-4">
+                        <label class="block text-gray-700 text-sm font-bold mb-2" for="message">Message</label>
+                        <textarea
+                            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                            id="message" rows="5" placeholder="Your message"></textarea>
+                    </div>
+                    <div class="flex items-center justify-center">
+                        <button
+                            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                            type="submit">Send Message</button>
+                    </div>
+                </form>
+            </div>
 
         </section>
         <dialog id="product-details-modal" class="modal">
@@ -349,6 +230,83 @@
             </div>
         </dialog>
     </main>
+    <footer>
+        <div>
+            <footer class="footer sm:footer-horizontal bg-base-200 text-base-content py-10 mb-0 bg-gray-900 text-white">
+                <div class="w-11/12 lg:w-8/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 text-xs">
+                    <aside class="w-fit">
+                        <a class="font-bold text-xl text-blue-700">SwiftCart</a>
+                        <p>
+                            Your one-stop shop for all your fashion
+                            and lfestyle needs. Quality products, fast
+                            delivery, and excellent support
+                        </p>
+                    </aside>
+                    <nav class="flex flex-col space-y-2 w-fit">
+                        <h6 class="footer-title">Quick Links</h6>
+                        <a class="link link-hover">Home</a>
+                        <a class="link link-hover">Product</a>
+                        <a class="link link-hover">About</a>
+                        <a class="link link-hover">Contacts</a>
+                    </nav>
+                    <nav class="flex flex-col space-y-2 w-fit">
+                        <h6 class="footer-title">Support</h6>
+                        <a class="link link-hover">FAQ</a>
+                        <a class="link link-hover">Shipping</a>
+                        <a class="link link-hover">Return</a>
+                        <a class="link link-hover">Privacy policy</a>
+                    </nav>
+                    <form>
+                        <h6 class="footer-title space-y-2">SUBSCRIBE TO OUR NEWSLETTER</h6>
+                        <fieldset class="w-fit">
+                            <label>The latest news, articles, and resources,sent to your inbox weekly.
+                            </label>
+                            <div class="lg:flex gap-2 mt-2 text-black text-xs">
+                                <input type="text" placeholder="Enter your email"
+                                    class="input input-bordered w-full lg:w-3/5" />
+                                <button class="btn btn-primary w-full lg:w-2/5 mt-2 lg:mt-0">Subscribe</button>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+
+            </footer>
+            <div class="bg-gray-900">
+                <div class="w-11/12 lg:w-8/12 mx-auto">
+                    <hr class="border-t border-white/30" />
+                </div>
+            </div>
+            <footer
+                class="footer sm:footer-horizontal bg-neutral text-neutral-content items-center py-4 bg-gray-900 text-white">
+                <div
+                    class="w-11/12 lg:w-8/12 mx-auto flex flex-col-reverse lg:flex-row lg:items-center lg:justify-between">
+
+                    <aside class="grid-flow-col items-center">
+
+                        <p>© 2025 SwiftCart, Inc. All rights reserved.
+                        </p>
+                    </aside>
+                    <nav class="flex gap-5 md:place-self-center md:justify-self-end">
+                        <a>
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <a>
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a>
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a>
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
+                        <a>
+                            <i class="fa-solid fa-envelope"></i>
+                        </a>
+                    </nav>
+                </div>
+            </footer>
+        </div>
+    </footer>
 
 
     <script src="index.js"></script>
